# vibe-check-cli

./: .gitignore  .vibecheck.yml  README.md  pyproject.toml
.github/workflows/: publish.yml  vibeaudit.yml  vibecheck.yml
hooks/: pre-push
tests/: mock_findings.py  test_dependencies.py  test_dry_run.py
tests/fixtures/vulnerable-fastapi-llm-app/: main.py  requirements.txt
vibe-audit/: pyproject.toml
vibe-audit/vibe_audit/analyzers/: base.py  compliance.py  secrets.py
vibe-audit/vibe_audit/core/: report.py
vibe-audit/vibe_audit/rules/: gdpr.yml  prompt_injection.yml  vibe_antipatterns.yml
vibe-audit/vibe_audit/utils/: llm_client.py  registry.py
vibe_audit/: __init__.py  cli.py
vibe_audit/analyzers/: __init__.py  base.py  compliance.py  dependencies.py  hallucination.py  llm_summarizer.py  nextjs.py  prompt_injection.py  sast.py  secrets.py
vibe_audit/core/: __init__.py  orchestrator.py  report.py  scorer.py
vibe_audit/models/: __init__.py  finding.py  result.py
vibe_audit/prompts/: compliance_review.txt  injection_review.txt  summary.txt
vibe_audit/rules/: gdpr.yml  prompt_injection.yml  soc2.yml  vibe_antipatterns.yml
vibe_audit/utils/: __init__.py  ast_mapper.py  config.py  llm_client.py
vibe_check/: __init__.py  cli.py
vibe_check/analyzers/: __init__.py  base.py  compliance.py  cost.py  dependencies.py  hallucination.py  llm_summarizer.py  nextjs.py  prompt_injection.py  sast.py  secrets.py
vibe_check/core/: __init__.py  orchestrator.py  report.py  scorer.py
vibe_check/models/: __init__.py  finding.py  result.py
vibe_check/prompts/: compliance_review.txt  summary.txt
vibe_check/rules/: gdpr.yml  prompt_injection.yml  soc2.yml  vibe_antipatterns.yml
vibe_check/utils/: __init__.py  ast_mapper.py  config.py  git_utils.py  llm_client.py
(+6 files in other folders)
