[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-audit"
version = "0.1.0"
description = "🎵 Security auditor for vibe-coded repos — 95% deterministic, 25x cheaper than competitors"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
    "anthropic>=0.18",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
vibe-audit = "vibe_audit.cli:main"
