[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-audit"
version = "0.1.0"
description = "A Python library for auditing vibe-coded code"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.scripts]
vibe-audit = "vibe_audit.cli:main"
